--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,18 +16,24 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 30%;
 }
 
 .action .table-edit {
   color: #464646;
+  margin: 0 .5em;
 }
 
 .action .table-delete {
   color: #ee7171;
+  margin: 0 .5em;
+}
+
+abbr .abbr-edit {
+  cursor: pointer;
+}
+
+abbr .abbr-delete {
+  cursor: pointer;
 }
 
 .buttons button:hover, .buttons a:hover {
@@ -82,6 +88,7 @@
   padding: .3em .3em;
   margin: .5em;
   border-left: 2px solid rgba(255, 209, 102, 0.3);
+  font-size: 1.1em;
 }
 
 .drawer-menu-item .submenu ul li:hover {
@@ -160,5 +167,126 @@
   margin-right: 0;
   border: none;
   width: 70%;
+}
+
+.confirm-delete {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opacity 300ms ease-in, hidden 300ms ease-in;
+  transition: opacity 300ms ease-in, hidden 300ms ease-in;
+  background: rgba(7, 59, 76, 0.2);
+  z-index: 1000;
+}
+
+.confirm-delete .box {
+  position: relative;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background: rgba(17, 138, 178, 0.8);
+  width: 50%;
+  height: 50%;
+}
+
+.confirm-delete .box .message {
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  width: 100%;
+  color: #ffd166;
+  font-size: 1.7em;
+}
+
+.confirm-delete .box .message .action {
+  display: inline;
+  background: #e73737;
+  border: 1px dashed gray;
+  border-radius: 1em;
+}
+
+.confirm-delete .box .message .target {
+  border-bottom: 3px solid #06d6a0;
+}
+
+.confirm-delete .box .buttons {
+  margin-top: 5em;
+  color: white;
+}
+
+.confirm-delete .box .buttons .confirm,
+.confirm-delete .box .buttons .cancel {
+  font-size: 1.65em;
+  width: 50%;
+  text-align: center;
+}
+
+.confirm-delete .box .buttons .confirm {
+  bottom: 3em;
+  left: 3em;
+}
+
+.confirm-delete .box .buttons .cancel {
+  bottom: 3em;
+  right: 3em;
+}
+
+.select-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.longlat {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.longlat .field {
+  width: 40%;
+}
+
+.longlat .input-latitude {
+  margin-right: 10%;
+}
+
+.longlat .input-longitude {
+  margin-left: 10%;
+}
+
+.bnameestpop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.bnameestpop .input-bname {
+  width: 50%;
+}
+
+.bnameestpop .input-estpop {
+  width: 40%;
+  margin-left: 10%;
 }
 /*# sourceMappingURL=main.css.map */
