--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,6 +42,17 @@ abbr .abbr-delete {
           transform: scale(1.2);
 }
 
+.drawer-menu .dp-img {
+  width: 100px;
+  height: auto;
+  padding: 1em;
+}
+
+.drawer-menu .dp-text {
+  font-size: 1.2em;
+  color: rebeccapurple;
+}
+
 .drawer-menu-item {
   width: 100%;
   overflow: hidden;
@@ -53,11 +64,16 @@ abbr .abbr-delete {
 
 .drawer-menu-item:focus-within, .drawer-menu-item:hover {
   color: white;
+  cursor: pointer;
   border-left: 0.5em solid #06d6a0;
 }
 
 .drawer-menu-item:focus-within .submenu {
   max-height: 20em;
+}
+
+.drawer-menu-item.drawer-active {
+  color: rebeccapurple;
 }
 
 .drawer-menu-item span,
@@ -112,7 +128,7 @@ abbr .abbr-delete {
 .signup-form,
 .login-form,
 .account-form {
-  max-width: 500px;
+  max-width: 800px;
   width: 30%;
   margin: 2em auto;
 }
@@ -334,6 +350,13 @@ abbr .abbr-delete {
 .login-form .date,
 .account-form .date {
   width: 100%;
+}
+
+.signup-form .dp_img,
+.login-form .dp_img,
+.account-form .dp_img {
+  width: 50%;
+  height: auto;
 }
 
 .select-section {
