--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -335,6 +335,17 @@ abbr {
 #covidTraceMap {
   min-height: 90%;
 }
+.mapping-controls {
+  display: flex;
+  margin-bottom: 2em;
+
+  justify-content: space-around;
+
+  .citymun,
+  .brgy {
+    min-width: 20%;
+  }
+}
 .mapping-options{
   margin: 2em auto;
   width: 80%;
