--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -311,10 +311,10 @@ abbr {
   &:focus,
   &:active:hover {
     font-style: inherit;
-    color: inherit;
+    color: inherit !important;
     background-color: transparent;
     font-size: inherit;
-    text-decoration: none;
+    text-decoration: none !important;
     font-variant: inherit;
     font-weight: inherit;
     line-height: inherit;
