--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -328,9 +328,9 @@ abbr {
   }
 }
 .mapping-main {
-  padding: 1em 5em;
+  // padding: 1em 5em;
   height: 100%;
-  width: 100%;
+  // width: 100%;
 }
 #covidTraceMap {
   min-height: 90%;
