--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -482,4 +482,36 @@ abbr .abbr-delete {
 #admin_accounts .admin_accounts_dp_row {
   text-align: center;
 }
+
+#employee-log-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#employee-log-form .input-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#employee-log-form .input-group + .input-group {
+  margin-top: 2em;
+}
 /*# sourceMappingURL=main.css.map */
